<resources>
    <string name="app_name">Absensi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="foto_pegawai">Foto Pegawai</string>
    <string name="capture_image">Ambil Gambar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_view_absence">Lihat Absensi</string>
    <string name="title_add_absence">Tambah Absensi</string>
    <string name="title_view_salary">Lihat Gaji</string>
    <string name="title_setting">Setting</string>
    <string name="strip">-</string>
    <string name="jam_masuk">Jam Masuk</string>
    <string name="jam_keluar">Jam Keluar</string>
    <string name="tanggal">Tanggal</string>
    <string name="nothing">Tidak Ada</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="nip">NIP</string>
    <string name="no_telp">No Telp</string>
    <string name="jabatan">Jabatan</string>
    <string name="key_name">name</string>
    <string name="key_username">username</string>
    <string name="key_nip">nip</string>
    <string name="key_jabatan">jabatan</string>
    <string name="key_no_telp">no_telp</string>

    <string-array name="data_tanggal">
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
        <item>14 Januari 2022</item>
    </string-array>

    <string-array name="data_jam_masuk">
        <item>08:00</item>
        <item>08:00</item>
        <item>08:00</item>
        <item>08:00</item>
        <item>08:00</item>
        <item>08:00</item>
        <item>08:00</item>
        <item>08:00</item>
        <item>08:00</item>
        <item>08:00</item>
    </string-array>

    <string-array name="data_jam_keluar">
        <item>16:00</item>
        <item>16:00</item>
        <item>16:00</item>
        <item>16:00</item>
        <item>16:00</item>
        <item>16:00</item>
        <item>16:00</item>
        <item>16:00</item>
        <item>16:00</item>
        <item>16:00</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_growithtech">Logo Growithtech</string>
</resources>