<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <EditTextPreference
        android:key="@string/key_nip"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/nip"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:key="@string/key_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/name"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:key="@string/key_jabatan"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/jabatan"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:key="@string/key_no_telp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/no_telp"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:key="@string/key_username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/username"
        app:iconSpaceReserved="false" />

</PreferenceScreen>