<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mohamadrizki.absensi.ui.tambah_absensi.TambahAbsensiFragment"
        android:label="@string/title_add_absence"
        tools:layout="@layout/fragment_tambah_absensi" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mohamadrizki.absensi.ui.lihat_absensi.DashboardFragment"
        android:label="@string/title_view_absence"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_lihat_gaji"
        android:name="com.mohamadrizki.absensi.ui.lihat_gaji.LihatGajiFragment"
        android:label="@string/title_view_salary"
        tools:layout="@layout/fragment_lihat_gaji" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.mohamadrizki.absensi.ui.profil.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>